deportes en rama futbol

--- a/deportes.html
+++ b/deportes.html
@@ -11,7 +11,7 @@
     <title>Deportes</title>
   </head>
   <body>
-    <h1>Deportes </h1>
+    <h1>Deportes en rama futbol </h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
