--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <title>Hello, world!</title>
   </head>
   <body>
+    
     <h1>Bootstrap desde cero</h1>
+    <h1>Cambio desde local</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
